[package]
name = "ocean"
version = "0.1.0"
authors = ["Clement Hussenot <chussenota@gmail.com>"]
description = "Thx for the fish"
repository = "https://github.com/chussenot/ocean"

[dependencies]
clap = {version = "2.31.2", features = ["yaml"]}
hyper = "0.11.24"

[dependencies.curl]
git = "https://github.com/carllerche/curl-rust"
